--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,15 +26,52 @@ body {
   top: 0;
 }
 
-
-.left {
-  float: left;
-  padding: 20px;
+.footer {
+  text-align: center;
+  bottom: 0;
+  background-color: grey;
 }
 
-.right {
-  align-content:flex end;
-  padding: 20px;
+.column {
+  float: left;
+  width: 50%;
+}
+
+.column2 {
+  float: right;
+  width: 50%;
+  text-align: right;
+  vertical-align: bottom;
+  display: table-cell;
+}
+
+.column75 {
+  float: left;
+  width: 75%;
+}
+
+.column20 {
+  float: left;
+  width: 20%;
+}
+
+.column25 {
+  float: left;
+  width: 25%;
+}
+
+.row {
+  padding: 1%;
+  background-color: whitesmoke;
+  content: "";
+  display: table;
+  clear: both;
+  width: 100%;
+}
+
+.lower {
+  padding: 2%;
+  background-color: whitesmoke;
 }
 
 /* Style the top navigation bar */
@@ -63,4 +100,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1 {
+  text-align: left;
+}
+
+P {
+  text-justify: auto;
 }
