--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,19 +9,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:lightgrey;
+  background-image: linear-gradient(to bottom right, rgb(6, 2, 68), lightgrey);
 }
 
 .card {
-  background-color: white;
+  background-color: rgb(34, 34, 34);
   padding: 20px;
   margin-top: 20px;
+  
 }
 
 /* Style the header */
 .header {
   background-color: #f1f1f1;
-  text-align: center;
   position: sticky;
   top: 0;
 }
@@ -39,7 +39,7 @@ body {
 
 .column2 {
   float: right;
-  width: 50%;
+  width: 25%;
   text-align: right;
   vertical-align: bottom;
   display: table-cell;
@@ -108,4 +108,28 @@ h1 {
 
 P {
   text-justify: auto;
+}
+
+#loans {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  padding: 1%;
+}
+
+#loans td, #loans th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#loans tr:nth-child(odd){background-color: rgba(19, 0, 194, 0.062);}
+
+#loans tr:hover {background-color: #ddd;}
+
+#loans th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-image: linear-gradient(to bottom right, rgb(6, 2, 68), lightgrey);
+  color: white;
 }
