--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,9 +50,14 @@ body {
   width: 75%;
 }
 
+.column15 {
+  float: left;
+  width:16.6%;
+}
+
 .column20 {
   float: left;
-  width: 20%;
+  width:20%;
 }
 
 .column25 {
@@ -130,6 +135,25 @@ P {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-image: linear-gradient(to bottom right, rgb(6, 2, 68), lightgrey);
+  background-image: linear-gradient(to top, rgb(6, 2, 68), rgba(6, 2, 68, 0.418));
   color: white;
+  
+}
+
+.dropbtn {
+  background-color: rgb(6, 2, 68);
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: 2px;
+  border-top-left-radius:15px;
+  border-top-right-radius:15px;
+  border-bottom-left-radius:15px;
+  border-bottom-right-radius:15px;
+}
+
+.dropbtn:hover  {
+  color:white;
+  background-image: linear-gradient(to bottom right, rgb(6, 2, 68), lightgrey);
+  border: 3px;
 }
