--- a/client/src/index.css
+++ b/client/src/index.css
@@ -109,6 +109,15 @@ code {
 
 h1 {
   text-align: left;
+	font-family: "Arial Black", Gadget, sans-serifpx;
+	color: #02175e;
+	text-shadow: rgba(163, 163, 163, 0.7) 3px 3px 2px;
+}
+
+h2 {
+	font-family: "Arial Black", Gadget, sans-serifpx;
+	color: #02175e;
+	text-shadow: rgba(163, 163, 163, 0.7) 3px 3px 2px;
 }
 
 P {
@@ -140,7 +149,7 @@ P {
   
 }
 
-.dropbtn {
+.loanbtn {
   background-color: rgb(6, 2, 68);
   color: white;
   padding: 16px;
@@ -152,8 +161,26 @@ P {
   border-bottom-right-radius:15px;
 }
 
-.dropbtn:hover  {
+.loanbtn:hover  {
   color:white;
-  background-image: linear-gradient(to bottom right, rgb(6, 2, 68), lightgrey);
+  background-image: linear-gradient(to bottom, rgb(6, 2, 68), rgba(185, 151, 247, 0.473));
+  border: 3px;
+}
+
+.acceptbtn {
+  background-color: rgb(6, 2, 68);
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: 2px;
+  border-top-left-radius:15px;
+  border-top-right-radius:15px;
+  border-bottom-left-radius:15px;
+  border-bottom-right-radius:15px;
+}
+
+.acceptbtn:hover  {
+  color:white;
+  background-image: linear-gradient(to bottom, rgb(6, 2, 68), rgba(151, 247, 188, 0.473));
   border: 3px;
 }
